Hopefully fixed title font size on mobile

--- a/styles.css
+++ b/styles.css
@@ -202,3 +202,9 @@ img {
     width: 100%;
     height: 315px;
 }
+
+@media only screen and (max-width: 600px) {
+    .hero-text h1{
+        font-size:3rem;
+      }
+  }
